# voteslikemyfave

./: .env  .gitignore  compose.devcontainer.yaml  compose.yaml
.devcontainer/front-end/: devcontainer.json
.devcontainer/scraper/: devcontainer.json
data/: README.md
scraper/: Dockerfile  README.md  pyproject.toml  queries.cypher
scraper/examples/: call_the_house.xml  sanders_bioguide.json
scraper/scraper/: __main__.py  bioguide.py  common.py  database.py  house.py  models.py  settings.py  source_data_model.py
scraper/scraper/senate/: __init__.py  member_list.py
votes-like-my-fave/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
votes-like-my-fave/app/: page.tsx
votes-like-my-fave/lib/: database.ts
votes-like-my-fave/src/components/: footer.tsx  header.tsx  legislator_utilities.tsx  similarity_table.tsx
votes-like-my-fave/src/lib/: database.ts  models.ts  utilities.ts
votes-like-my-fave/src/pages/: _document.tsx  index.tsx
votes-like-my-fave/src/pages/[lastname]/: [state_party].tsx
votes-like-my-fave/src/pages/[state]/[lastname]/: index.tsx
