[project]
name = "scraper"
version = "0.1.0"
description = "Scraper for congresstional votes and data"
authors = [
    {name = "Fred Buchanan",email = "oscillator.b@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j (>=5.27.0,<6.0.0)",
    "unidecode (>=1.3.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

